adding async functions

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
 * add error handling middleware for nodejs server
 * Possibly convert spotify api to class syntax
 * structure redis data better - look into sets and lists
+* configure redis to use a unix socket
