--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,4 @@
 * configure redis to use a unix socket
 * need to generate authorized code - right now just storing original one
 * react drag and drop (dnd) to drag and drop songs or something else
+* Lock down CORS server-side
